Fix broken layout on mobile

--- a/src/main.scss
+++ b/src/main.scss
@@ -97,6 +97,9 @@ h4 {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        border-radius: 0.5rem;
+        overflow: hidden;
+        box-shadow: var(--shadow);
 
         .todo-item {
             display: flex;
@@ -107,45 +110,44 @@ h4 {
             border-bottom: 1px solid #d3d3d3;
             box-shadow: var(--shadow);
 
-            // label {
-            //     margin-right: 1rem;
-            //     cursor: pointer;
-            // }
+            label {
+                cursor: pointer;
+            }
 
             .todo-content {
-                flex: 1;    
-                // input {
-                //     color: var(--dark);
-                //     font-size: 1.125rem;
-                // }
+                flex: 1;   
+                input {
+                    color: var(--dark);
+                    font-size: 1.125rem;
+                    width: 100%; 
+                }
             }
 
             .actions {
                 display: flex;
                 align-items: center;
-                gap: 1rem;
+                gap: 0.5rem;
+            
+                button {
+                    padding: 0.5rem;
+                    border-radius: 0.25rem;
+                    color: #fff;
+                    cursor: pointer;
+                    transition: 0.2s ease-in-out;
+                }
+
+                button:hover {
+                    opacity: 0.75;
+                }
+
+                .edit {
+                    background-color: var(--primary);
+                }
+
+                .delete {
+                    background-color: var(--danger);
+                }
             }
-                // button {
-                //     padding: 0.5rem;
-                //     border-radius: 0.25rem;
-                //     color: #fff;
-                //     cursor: pointer;
-                //     transition: 0.2s ease-in-out;
-                // }
-
-            //     button:hover {
-            //         opacity: 0.75;
-            //     }
-
-            //     .edit {
-            //         margin-right: 0.5rem;
-            //         background-color: var(--primary);
-            //     }
-
-            //     .delete {
-            //         background-color: var(--danger);
-            //     }
-            // }
         }
     }
 
